--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -29,16 +29,16 @@ dock_4="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://player/player.tscn", "res://levels/test_levels/test_level.tscn", "res://enemies/enemy_death_effect.tscn", "res://enemies/crab/enemy_crab.tscn", "res://levels/level_1.tscn", "res://levels/level_2.tscn", "res://levels/base_level.tscn")
-current_scene="res://levels/level_2.tscn"
+current_scene="res://levels/level_1.tscn"
 center_split_offset=-369
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://player/bullet.gd", "res://levels/danger_zone.gd", "res://enemies/crab/enemy_crab.gd", "res://enemies/enemy_death_effect.gd", "res://player/player_states/fall_state.gd", "res://player/game_input_events.gd", "res://scripts/health_manager.gd", "res://player/player_states/idle_state.gd", "res://player/player_states/jump_state.gd", "res://levels/level_1.gd", "res://scripts/state_machine/node_finite_state_machine.gd", "res://scripts/state_machine/node_state.gd", "res://player/player.gd", "res://player/player_camera.gd", "res://player/player_death_effect/player_death_effect.gd", "res://player/player_states/run_state.gd", "res://scripts/scene_manager.gd", "res://player/player_states/shoot_crounch_state.gd", "res://player/player_states/shoot_run_state.gd", "res://player/player_states/shoot_stand_state.gd", "res://player/player_states/shoot_up_state.gd", "res://player/player_states/shoot_wall_cling_state.gd"]
-selected_script="res://player/player.gd"
+selected_script="res://levels/level_1.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
