--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=1
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://tileset/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://player/", "res://levels/", "res://enemies/")
+dock_filesystem_selected_paths=PackedStringArray("res://scripts/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://scripts/", "res://player/", "res://levels/", "res://enemies/", "res://collectibles/")
 dock_split_1=0
 dock_1="FileSystem"
 dock_3="Scene,Import"
@@ -28,17 +28,17 @@ dock_4="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://player/player.tscn", "res://levels/test_levels/test_level.tscn", "res://enemies/enemy_death_effect.tscn", "res://enemies/crab/enemy_crab.tscn", "res://levels/level_1.tscn", "res://levels/level_2.tscn", "res://levels/base_level.tscn")
-current_scene="res://levels/level_1.tscn"
+open_scenes=PackedStringArray("res://player/player.tscn", "res://levels/level_1.tscn", "res://levels/level_2.tscn", "res://levels/level_3.tscn", "res://levels/test_levels/test_level.tscn", "res://enemies/enemy_death_effect.tscn", "res://enemies/crab/enemy_crab.tscn", "res://levels/base_level.tscn")
+current_scene="res://levels/level_2.tscn"
 center_split_offset=-369
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://player/bullet.gd", "res://levels/danger_zone.gd", "res://enemies/crab/enemy_crab.gd", "res://enemies/enemy_death_effect.gd", "res://player/player_states/fall_state.gd", "res://player/game_input_events.gd", "res://scripts/health_manager.gd", "res://player/player_states/idle_state.gd", "res://player/player_states/jump_state.gd", "res://levels/level_1.gd", "res://scripts/state_machine/node_finite_state_machine.gd", "res://scripts/state_machine/node_state.gd", "res://player/player.gd", "res://player/player_camera.gd", "res://player/player_death_effect/player_death_effect.gd", "res://player/player_states/run_state.gd", "res://scripts/scene_manager.gd", "res://player/player_states/shoot_crounch_state.gd", "res://player/player_states/shoot_run_state.gd", "res://player/player_states/shoot_stand_state.gd", "res://player/player_states/shoot_up_state.gd", "res://player/player_states/shoot_wall_cling_state.gd"]
-selected_script="res://levels/level_1.gd"
+open_scripts=["res://player/bullet.gd", "res://levels/danger_zone.gd", "res://enemies/crab/enemy_crab.gd", "res://enemies/enemy_death_effect.gd", "res://player/player_states/fall_state.gd", "res://player/game_input_events.gd", "res://ui/game_screen.gd", "res://scripts/health_manager.gd", "res://player/player_states/idle_state.gd", "res://player/player_states/jump_state.gd", "res://levels/level_1.gd", "res://scripts/state_machine/node_finite_state_machine.gd", "res://scripts/state_machine/node_state.gd", "res://player/player.gd", "res://player/player_camera.gd", "res://player/player_death_effect/player_death_effect.gd", "res://player/player_states/run_state.gd", "res://scripts/scene_manager.gd", "res://player/player_states/shoot_crounch_state.gd", "res://player/player_states/shoot_run_state.gd", "res://player/player_states/shoot_stand_state.gd", "res://player/player_states/shoot_up_state.gd", "res://player/player_states/shoot_wall_cling_state.gd"]
+selected_script="res://scripts/scene_manager.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
